# rss-wimbledon-2025

./: .gitignore  .pre-commit-config.yaml  README.md  alternative_models.py  longitudinal_analysis.sh  main.py  parameter_evals_male.csv  pyproject.toml  run_alternative_models.ps1  run_alternative_models.sh  run_app.py
.github/workflows/: ci.yml
src/alternative_models/: __init__.py  base_alt_model.py  bookmaker_odds_model.py  bradley_terry_model.py  elo_model.py  model_registry.py  random_forest_model.py  visualisation.ipynb
src/main_package/: example.py
src/main_package/app/: draw_creator.py
src/main_package/data/: 2019_women.csv  2020_women.csv  2021_women.csv  2022_women.csv  2023_women.csv  2024_men.csv  2024_women.csv  2025_men.csv  2025_women.csv  load_data.py
src/main_package/data/draws/: Wimbledon_2025_female.csv  Wimbledon_2025_male.csv
src/main_package/model/: assign_tokens.py  fit_parameters.py  predict.py  train.py  utils.py
src/main_package/notebooks/: test.ipynb  visualisation.ipynb
tests/: test_example.py
tests/test_data/: test_load_data.py
