[project]
name = "python-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.1.0",
    "bs4>=0.0.2",
    "dataframe-image>=0.2.7",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "requests>=2.32.3",
    "ruff>=0.11.11",
    "scikit-learn>=1.8.0",
    "scipy>=1.15.3",
    "streamlit>=1.46.1",
    "tqdm>=4.67.1",
    "xgboost>=3.1.3",
]
